# tinyviz

./: README.md  jupyter.sh  lib.py  lint.sh  puzzles.ipynb  pyproject.toml  test.sh
.github/workflows/: pr-checks.yml  release.yml
src/tinyviz/: __init__.py
stubs/colour/: __init__.pyi
tests/: conftest.py  test_graph_recorder.py  test_helpers.py  test_names.py  test_rendering.py  test_visual_regression.py
