[project]
name = "tinyviz"
version = "0.1.0"
description = "Graph recorder and visualization helpers for tinygrad tensors."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "tinyviz contributors" }]
dependencies = [
  "chalk-diagrams",
  "colour",
  "ipython",
  "numpy",
  "pillow",
  "tinygrad",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinyviz"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[tool.mypy]
mypy_path = "stubs"
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["chalk", "chalk.*", "IPython", "IPython.*", "tinygrad", "tinygrad.*"]
ignore_missing_imports = true
